--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -3,7 +3,7 @@ name = "elulib-desktop"
 version = "0.1.0"
 description = "Application de bureau élulib"
 authors = ["élulib"]
-license = ""
+license = "MIT"
 repository = "https://github.com/elulib/desktop-app"
 edition = "2021"
 rust-version = "1.77.2"
@@ -13,6 +13,8 @@ rust-version = "1.77.2"
 tauri-build = { version = "2.5.1", features = [] }
 
 [dependencies]
+tauri-plugin-notification = "2.0.0"
+
 # Core dependencies
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
