--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -20,9 +20,9 @@ serde = { version = "1.0", features = ["derive"] }
 log = "0.4"
 thiserror = "1.0"
 serde_repr = "0.1"
-tokio = { version = "1.0", features = ["rt-multi-thread", "time"] }
 keyring = "2.0"
 url = "2.5"
+tokio = { version = "1.0", features = ["rt-multi-thread", "time", "net"] }
 
 # Tauri dependencies
 tauri = { version = "2.9.2", features = ["tray-icon", "image-ico", "image-png"] }
@@ -31,6 +31,7 @@ tauri-plugin-dialog = "2.0.0"
 tauri-plugin-log = "2.0.0"
 tauri-plugin-notification = "2.0.0"
 tauri-plugin-shell = "2.0"
+tauri-plugin-opener = "2"
 
 [features]
 default = ["tauri/custom-protocol"]
