--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "elulib-desktop"
 version = "0.1.0"
-description = "Application de bureau élulib"
+description = "élulib desktop application"
 authors = ["élulib"]
 license = ""
 repository = "https://github.com/elulib/desktop-app"
