--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -3,7 +3,7 @@ name = "elulib-desktop"
 version = "0.1.0"
 description = "élulib desktop application"
 authors = ["élulib"]
-license = ""
+license = "MIT"
 repository = "https://github.com/elulib/desktop-app"
 edition = "2021"
 rust-version = "1.77.2"
