--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -71,9 +71,15 @@ jobs:
           prerelease: ${{ github.event.release.prerelease }}
 
       - name: Code sign Windows installer
-        if: matrix.target == 'x86_64-pc-windows-msvc' && secrets.MICROSOFT_AUTHENTICODE_CERTIFICATE != ''
+        if: matrix.target == 'x86_64-pc-windows-msvc'
         run: |
           echo "Starting Windows code signing..."
+          
+          # Check if certificate is available
+          if [ -z "$MICROSOFT_AUTHENTICODE_CERTIFICATE" ]; then
+            echo "Warning: Microsoft Authenticode certificate not configured, skipping code signing"
+            exit 0
+          fi
           
           # Find the installer file
           INSTALLER_PATH=$(find src-tauri/target/${{ matrix.target }}/release/bundle -name "*.exe" -o -name "*.msi" -o -name "*.zip" | head -1)
@@ -130,7 +136,7 @@ jobs:
           MICROSOFT_AUTHENTICODE_CERTIFICATE_PASSWORD: ${{ secrets.MICROSOFT_AUTHENTICODE_CERTIFICATE_PASSWORD }}
 
       - name: Code sign macOS app
-        if: (matrix.target == 'aarch64-apple-darwin' || matrix.target == 'x86_64-apple-darwin') && secrets.APPLE_DEVELOPER_CERTIFICATE != ''
+        if: matrix.target == 'aarch64-apple-darwin' || matrix.target == 'x86_64-apple-darwin'
         run: |
           echo "Starting macOS code signing..."
           
