--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -19,7 +19,7 @@ jobs:
             os: macos-latest
             target: aarch64-apple-darwin
           - label: macOS (Intel)
-            os: macos-13
+            os: macos-15-intel
             target: x86_64-apple-darwin
           - label: Windows (x64)
             os: windows-latest
