--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "npm run test:rust",
     "test:rust": "cd src-tauri && cargo test",
     "test:rust:unit": "cd src-tauri && cargo test --lib",
-    "test:rust:integration": "cd src-tauri && cargo test --test '*'"
+    "test:rust:integration": "cd src-tauri && cargo test --tests"
   },
   "author": "elulib",
   "license": "MIT",
