--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -30,6 +30,9 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Setup Rust
+        uses: dtolnay/rust-toolchain@stable
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
@@ -37,6 +40,10 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
+
+      - name: Install Tauri CLI (cargo subcommand)
+        if: matrix.target == 'aarch64-apple-darwin' || matrix.target == 'x86_64-apple-darwin'
+        run: cargo install tauri-cli --locked
 
       # Windows build using Tauri action
       - name: Build Windows
