--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -38,3 +38,4 @@ default = ["tauri/custom-protocol"]
 
 [dev-dependencies]
 tokio-test = "0.4"
+tokio = { version = "1.0", features = ["rt-multi-thread", "time", "net", "macros", "test-util"] }
