--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "scripts": {
     "tauri": "tauri",
     "sync-version": "node scripts/sync-version.js",
+    "dev:win": "npm run sync-version && cargo tauri dev --target x86_64-pc-windows-msvc",
+    "dev:mac": "npm run sync-version && cargo tauri dev --target aarch64-apple-darwin",
+    "dev:mac-intel": "npm run sync-version && cargo tauri dev --target x86_64-apple-darwin",
     "build:win": "npm run sync-version && cargo tauri build --target x86_64-pc-windows-msvc",
     "build:mac": "npm run sync-version && cargo tauri build --target aarch64-apple-darwin",
     "build:mac-intel": "npm run sync-version && cargo tauri build --target x86_64-apple-darwin",
